// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# Navbar 1`] = `
<nav
  className="navbar navbar-default"
>
  <div
    className="container-fluid"
  >
    <div
      className="navbar-header"
    >
      <Link
        className="navbar-brand"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/"
      >
        Brand
      </Link>
    </div>
    <ul
      className="nav navbar-nav"
    >
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/other"
        >
          page Not Found
        </Link>
      </li>
      <li
        className="active"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/"
        >
          Browse questions
        </Link>
      </li>
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/create"
        >
          Create new questions
        </Link>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`# Navbar 2`] = `
<nav
  className="navbar navbar-default"
>
  <div
    className="container-fluid"
  >
    <div
      className="navbar-header"
    >
      <Link
        className="navbar-brand"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/"
      >
        Brand
      </Link>
    </div>
    <ul
      className="nav navbar-nav"
    >
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/other"
        >
          page Not Found
        </Link>
      </li>
      <li
        className="active"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/"
        >
          Browse questions
        </Link>
      </li>
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/create"
        >
          Create new questions
        </Link>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`# Navbar 3`] = `
<nav
  className="navbar navbar-default"
>
  <div
    className="container-fluid"
  >
    <div
      className="navbar-header"
    >
      <Link
        className="navbar-brand"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/"
      >
        Brand
      </Link>
    </div>
    <ul
      className="nav navbar-nav"
    >
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/other"
        >
          page Not Found
        </Link>
      </li>
      <li
        className="active"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/"
        >
          Browse questions
        </Link>
      </li>
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/create"
        >
          Create new questions
        </Link>
      </li>
    </ul>
    <ul
      className="nav navbar-nav navbar-right"
    >
      <li>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/profile/me"
        >
          test
        </Link>
      </li>
    </ul>
  </div>
</nav>
`;
